LinkedListTest fix